[package]
name = "ludtwig-parser"
description = "Parser for twig / html / vue templating syntax."
version = "0.2.0"
authors = ["Malte Janz <malte.janz@yahoo.de>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[profile.release]
lto = true # does increase runtime performance for longer build times

[[bench]]
name = "parsing_benchmark"
harness = false

[dev-dependencies]
criterion = "^0.3.3"

[dependencies]
nom = "~6.0.1"
